--- a/egypt/index.html
+++ b/egypt/index.html
@@ -107,7 +107,7 @@
                                 <a href="https://resolute-dynamics.com">
                                 <div class="headerarea__left__logo">
                                     <video class="logo-video" autoplay="" loop="" muted="">
-                                        <source src="img/resolute-new-logo-white.mp4" type="video/mp4">
+                                        <source src="/egypt/img/resolute-new-logo-white.mp4" type="video/mp4">
                                     </video>
                                 </div>
                                 </a>
@@ -144,7 +144,7 @@
                         <div class="col-6">
                             <div class="mobile-logo">
                                 <video class="logo-video" autoplay="" loop="" muted="">
-                                    <source src="img/resolute-new-logo-white.mp4" type="video/mp4">
+                                    <source src="/egypt/img/resolute-new-logo-white.mp4" type="video/mp4">
                                 </video>
                             </div>
                         </div>
@@ -288,7 +288,7 @@
                     <div class="col-xl-6 col-lg-4 col-md-6 col-sm-12 col-12" data-aos="fade-up">
                         <div class="single__blog__wraper">
                             <div class="single__blog__img">
-                                <img loading="lazy" src="img/fsl.png" alt="Speed Limiter">
+                                <img loading="lazy" src="/egypt/img/fsl.png" alt="Speed Limiter">
                             </div>
                             <div class="single__blog__content">
 
@@ -304,7 +304,7 @@
                     <div class="col-xl-6 col-lg-4 col-md-6 col-sm-12 col-12" data-aos="fade-up">
                         <div class="single__blog__wraper">
                             <div class="single__blog__img">
-                                <img loading="lazy" src="img/dual-speed-limiter-multi-speed-limiter.png" alt="Dual Speed Limiter Multi speed Limiter">
+                                <img loading="lazy" src="/egypt/img/dual-speed-limiter-multi-speed-limiter.png" alt="Dual Speed Limiter Multi speed Limiter">
                             </div>
                             <div class="single__blog__content">
                                 <h3 class="product"> <a href="#">Dual Speed Limiter and Multi Speed Limiter</a></h3>
@@ -319,7 +319,7 @@
                     <div class="col-xl-6 col-lg-4 col-md-6 col-sm-12 col-12" data-aos="fade-up">
                         <div class="single__blog__wraper">
                             <div class="single__blog__img">
-                                <img loading="lazy" src="img//rpm-regulator.png" alt="RPM Regulator">
+                                <img loading="lazy" src="/egypt/img/rpm-regulator.png" alt="RPM Regulator">
                             </div>
                             <div class="single__blog__content">
 
@@ -335,7 +335,7 @@
                     <div class="col-xl-6 col-lg-4 col-md-6 col-sm-12 col-12" data-aos="fade-up">
                         <div class="single__blog__wraper">
                             <div class="single__blog__img">
-                                <img loading="lazy" src="img/thermopro.png" alt="Thermopro">
+                                <img loading="lazy" src="/egypt/img/thermopro.png" alt="Thermopro">
                             </div>
                             <div class="single__blog__content">
 
@@ -358,7 +358,7 @@
                         <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 col-12" data-aos="fade-up">
                             <div class="about__right__wraper__2">
                                 <div class="educationarea__img" data-tilt>
-                                    <img loading="lazy" style="width: 100%;" src="img/why.png"
+                                    <img loading="lazy" style="width: 100%;" src="/egypt/img/why.png"
                                         alt="about">
                                     <!-- <img loading="lazy"  class="aboutarea__2__img__1" src="img/about/about_2.png" alt="education"> -->
                                     <!-- <img loading="lazy"  class="aboutarea__2__img__2" src="img/about/about_3.png" alt="education"> -->
@@ -478,9 +478,9 @@
                 </div>
             </div>
             <div class="registerarea__img">
-                <img loading="lazy" class="register__1" src="img/register__1.png" alt="register">
-                <img loading="lazy" class="register__2" src="img/register__2.png" alt="register">
-                <img loading="lazy" class="register__3" src="img/register__3.png" alt="register">
+                <img loading="lazy" class="register__1" src="/egypt/img/register__1.png" alt="register">
+                <img loading="lazy" class="register__2" src="/egypt/img/register__2.png" alt="register">
+                <img loading="lazy" class="register__3" src="/egypt/img/register__3.png" alt="register">
             </div>
         </div>
 
@@ -493,7 +493,7 @@
                             <div class="footerarea__inner footerarea__about__us">
                                 <div class="footerarea__heading">
                                     <video class="logo-video" autoplay="" loop="" muted="">
-                                        <source src="img/resolute-new-logo-white.mp4" type="video/mp4">
+                                        <source src="/egypt/img/resolute-new-logo-white.mp4" type="video/mp4">
                                     </video>
                                 </div>
 
