--- a/zimbabwe/index.html
+++ b/zimbabwe/index.html
@@ -107,7 +107,7 @@
                                 <a href="https://resolute-dynamics.com">
                                 <div class="headerarea__left__logo">
                                     <video class="logo-video" autoplay="" loop="" muted="">
-                                        <source src="img/resolute-new-logo-white.mp4" type="video/mp4">
+                                        <source src="/zimbabwe/img/resolute-new-logo-white.mp4" type="video/mp4">
                                     </video>
                                 </div>
                                 </a>
@@ -144,7 +144,7 @@
                         <div class="col-6">
                             <div class="mobile-logo">
                                 <video class="logo-video" autoplay="" loop="" muted="">
-                                    <source src="img/resolute-new-logo-white.mp4" type="video/mp4">
+                                    <source src="/zimbabwe/img/resolute-new-logo-white.mp4" type="video/mp4">
                                 </video>
                             </div>
                         </div>
@@ -289,7 +289,7 @@
                     <div class="col-xl-6 col-lg-4 col-md-6 col-sm-12 col-12" data-aos="fade-up">
                         <div class="single__blog__wraper">
                             <div class="single__blog__img">
-                                <img loading="lazy" src="img/fsl.png" alt="Speed Limiter">
+                                <img loading="lazy" src="/zimbabwe/img/fsl.png" alt="Speed Limiter">
                             </div>
                             <div class="single__blog__content">
 
@@ -306,7 +306,7 @@
                     <div class="col-xl-6 col-lg-4 col-md-6 col-sm-12 col-12" data-aos="fade-up">
                         <div class="single__blog__wraper">
                             <div class="single__blog__img">
-                                <img loading="lazy" src="img/dual-speed-limiter-multi-speed-limiter.png" alt="Dual Speed Limiter Multi speed Limiter">
+                                <img loading="lazy" src="/zimbabwe/img/dual-speed-limiter-multi-speed-limiter.png" alt="Dual Speed Limiter Multi speed Limiter">
                             </div>
                             <div class="single__blog__content">
                                 <h3 class="product"> <a href="#">Dual Speed Limiter and Multi Speed Limiter</a></h3>
@@ -322,7 +322,7 @@
                     <div class="col-xl-6 col-lg-4 col-md-6 col-sm-12 col-12" data-aos="fade-up">
                         <div class="single__blog__wraper">
                             <div class="single__blog__img">
-                                <img loading="lazy" src="img//rpm-regulator.png" alt="RPM Regulator">
+                                <img loading="lazy" src="/zimbabwe/img/rpm-regulator.png" alt="RPM Regulator">
                             </div>
                             <div class="single__blog__content">
 
@@ -338,7 +338,7 @@
                     <div class="col-xl-6 col-lg-4 col-md-6 col-sm-12 col-12" data-aos="fade-up">
                         <div class="single__blog__wraper">
                             <div class="single__blog__img">
-                                <img loading="lazy" src="img/smart-lift-monitor.png" alt="Smart Lift Monitor">
+                                <img loading="lazy" src="/zimbabwe/img/smart-lift-monitor.png" alt="Smart Lift Monitor">
                             </div>
                             <div class="single__blog__content">
 
@@ -361,7 +361,7 @@
                         <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 col-12" data-aos="fade-up">
                             <div class="about__right__wraper__2">
                                 <div class="educationarea__img" data-tilt>
-                                    <img loading="lazy" style="width: 100%;" src="img/why.png"
+                                    <img loading="lazy" style="width: 100%;" src="/zimbabwe/img/why.png"
                                         alt="about">
                                     <!-- <img loading="lazy"  class="aboutarea__2__img__1" src="img/about/about_2.png" alt="education"> -->
                                     <!-- <img loading="lazy"  class="aboutarea__2__img__2" src="img/about/about_3.png" alt="education"> -->
@@ -484,9 +484,9 @@
                 </div>
             </div>
             <div class="registerarea__img">
-                <img loading="lazy" class="register__1" src="img/register__1.png" alt="register">
-                <img loading="lazy" class="register__2" src="img/register__2.png" alt="register">
-                <img loading="lazy" class="register__3" src="img/register__3.png" alt="register">
+                <img loading="lazy" class="register__1" src="/zimbabwe/img/register__1.png" alt="register">
+                <img loading="lazy" class="register__2" src="/zimbabwe/img/register__2.png" alt="register">
+                <img loading="lazy" class="register__3" src="/zimbabwe/img/register__3.png" alt="register">
             </div>
         </div>
 
@@ -499,7 +499,7 @@
                             <div class="footerarea__inner footerarea__about__us">
                                 <div class="footerarea__heading">
                                     <video class="logo-video" autoplay="" loop="" muted="">
-                                        <source src="img/resolute-new-logo-white.mp4" type="video/mp4">
+                                        <source src="/zimbabwe/img/resolute-new-logo-white.mp4" type="video/mp4">
                                     </video>
                                 </div>
 
