--- a/india/index.html
+++ b/india/index.html
@@ -107,7 +107,7 @@
                                 <a href="https://resolute-dynamics.com">
                                 <div class="headerarea__left__logo">
                                     <video class="logo-video" autoplay="" loop="" muted="">
-                                        <source src="img/resolute-new-logo-white.mp4" type="video/mp4">
+                                        <source src="/india/img/resolute-new-logo-white.mp4" type="video/mp4">
                                     </video>
                                 </div>
                                 </a>
@@ -144,7 +144,7 @@
                         <div class="col-6">
                             <div class="mobile-logo">
                                 <video class="logo-video" autoplay="" loop="" muted="">
-                                    <source src="img/resolute-new-logo-white.mp4" type="video/mp4">
+                                    <source src="/india/img/resolute-new-logo-white.mp4" type="video/mp4">
                                 </video>
                             </div>
                         </div>
@@ -289,7 +289,7 @@
                     <div class="col-xl-6 col-lg-4 col-md-6 col-sm-12 col-12" data-aos="fade-up">
                         <div class="single__blog__wraper">
                             <div class="single__blog__img">
-                                <img loading="lazy" src="img/fsl.png" alt="Speed Limiter">
+                                <img loading="lazy" src="/india/img/fsl.png" alt="Speed Limiter">
                             </div>
                             <div class="single__blog__content">
 
@@ -306,7 +306,7 @@
                     <div class="col-xl-6 col-lg-4 col-md-6 col-sm-12 col-12" data-aos="fade-up">
                         <div class="single__blog__wraper">
                             <div class="single__blog__img">
-                                 <img loading="lazy" src="img/dual-speed-limiter-multi-speed-limiter.png" alt="Dual Speed Limiter Multi speed Limiter">
+                                 <img loading="lazy" src="/india/img/dual-speed-limiter-multi-speed-limiter.png" alt="Dual Speed Limiter Multi speed Limiter">
                             </div>
                             <div class="single__blog__content">
 
@@ -323,7 +323,7 @@
                     <div class="col-xl-6 col-lg-4 col-md-6 col-sm-12 col-12" data-aos="fade-up">
                         <div class="single__blog__wraper">
                             <div class="single__blog__img">
-                                <img loading="lazy" src="img//rpm-regulator.png" alt="RPM Regulator">
+                                <img loading="lazy" src="/india/img/rpm-regulator.png" alt="RPM Regulator">
                             </div>
                             <div class="single__blog__content">
 
@@ -339,7 +339,7 @@
                     <div class="col-xl-6 col-lg-4 col-md-6 col-sm-12 col-12" data-aos="fade-up">
                         <div class="single__blog__wraper">
                             <div class="single__blog__img">
-                                <img loading="lazy" src="img/smart-lift-monitor.png" alt="Smart Lift Monitor">
+                                <img loading="lazy" src="/india/img/smart-lift-monitor.png" alt="Smart Lift Monitor">
                             </div>
                             <div class="single__blog__content">
 
@@ -362,7 +362,7 @@
                         <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 col-12" data-aos="fade-up">
                             <div class="about__right__wraper__2">
                                 <div class="educationarea__img" data-tilt>
-                                    <img loading="lazy" style="width: 100%;" src="img/why.png"
+                                    <img loading="lazy" style="width: 100%;" src="/india/img/why.png"
                                         alt="about">
                                     <!-- <img loading="lazy"  class="aboutarea__2__img__1" src="img/about/about_2.png" alt="education"> -->
                                     <!-- <img loading="lazy"  class="aboutarea__2__img__2" src="img/about/about_3.png" alt="education"> -->
@@ -485,9 +485,9 @@
                 </div>
             </div>
             <div class="registerarea__img">
-                <img loading="lazy" class="register__1" src="img/register__1.png" alt="register">
-                <img loading="lazy" class="register__2" src="img/register__2.png" alt="register">
-                <img loading="lazy" class="register__3" src="img/register__3.png" alt="register">
+                <img loading="lazy" class="register__1" src="/india/img/register__1.png" alt="register">
+                <img loading="lazy" class="register__2" src="/india/img/register__2.png" alt="register">
+                <img loading="lazy" class="register__3" src="/india/img/register__3.png" alt="register">
             </div>
         </div>
 
@@ -500,7 +500,7 @@
                             <div class="footerarea__inner footerarea__about__us">
                                 <div class="footerarea__heading">
                                     <video class="logo-video" autoplay="" loop="" muted="">
-                                        <source src="img/resolute-new-logo-white.mp4" type="video/mp4">
+                                        <source src="/india/img/resolute-new-logo-white.mp4" type="video/mp4">
                                     </video>
                                 </div>
 
