--- a/philippines/index.html
+++ b/philippines/index.html
@@ -225,7 +225,7 @@
         <!-- theme fixed shadow -->
 
         <!-- herobannerarea__section__start -->
-        <div class="herobannerarea herobannerarea__2 herobannerarea__machine__learning" style="background: url(img/banner.jpg);background: url(img/banner.jpg);
+        <div class="herobannerarea herobannerarea__2 herobannerarea__machine__learning" style="background: url(/philippines/img/banner.jpg);background: url(/philippines/img/banner.jpg);
             background-position: center;
             background-size: cover;">
             <div class="swiper ai__slider">
