--- a/saudi-arabia/index.html
+++ b/saudi-arabia/index.html
@@ -226,7 +226,7 @@
         <!-- theme fixed shadow -->
 
         <!-- herobannerarea__section__start -->
-        <div class="herobannerarea herobannerarea__2 herobannerarea__machine__learning" style="background: url(img/banner.jpg);background: url(img/banner.jpg);
+        <div class="herobannerarea herobannerarea__2 herobannerarea__machine__learning" style="background: url(/saudi-arabia/img/banner.jpg);background: url(/saudi-arabia/img/banner.jpg);
             background-position: center;
             background-size: cover;">
 
