Canonical tags added

--- a/philippines/index.html
+++ b/philippines/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="Explore Resolute Dynamics' cutting-edge speed limiters and automotive safety solutions in the Philippines. Ensure compliance with Republic Act 10916 and enhance road safety with certified, fuel-efficient technologies.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="canonical" href="https://speed.resolute-dynamics.com/philippines/"/>
     <link rel="shortcut icon" type="image/x-icon" href="/philippines/img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
     <!-- CSS here -->
