--- a/kuwait/index.html
+++ b/kuwait/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="Discover our advanced vehicle safety products, RPM Regulators, Thermopro Systems, Multi Speed Limiters, and Dual Speed Limiters in Kuwait at Resolute Dynamics now.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="canonical" href="https://speed.resolute-dynamics.com/kuwait/"/>
     <link rel="shortcut icon" type="image/x-icon" href="/kuwait/img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
     <!-- CSS here -->
