--- a/saudi-arabia/index.html
+++ b/saudi-arabia/index.html
@@ -7,6 +7,7 @@
     <meta name="description"
         content="Discover our advanced vehicle safety products, RPM Regulators, Smart Lift Systems, Multi Speed Limiters, and Dual Speed Limiters in Saudi Arabia at Resolute Dynamics now.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="canonical" href="https://speed.resolute-dynamics.com/saudi-arabia/"/>
     <link rel="shortcut icon" type="image/x-icon" href="/saudi-arabia/img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
     <!-- CSS here -->
